--- a/排序算法/排序算法.vcxproj.filters
+++ b/排序算法/排序算法.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="insertSort.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="quickSort.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="selectSort.cpp">
@@ -42,6 +45,9 @@
       <Filter>头文件</Filter>
     </ClCompile>
     <ClCompile Include="mergeSort.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="quickSort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
