--- a/排序算法/排序算法.vcxproj.filters
+++ b/排序算法/排序算法.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="quickSort.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="countSort.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="bucketSort.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="selectSort.cpp">
@@ -48,6 +54,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="quickSort.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="countSort.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="bucketSort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
